// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EbayDetails> rendering renders center alignment story correctly 1`] = `
<details
  class="details"
>
  <summary
    class="details__summary details__summary--center"
  >
    <span
      class="details__label"
    >
      Show me the details!
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <p
    class=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</details>
`;

exports[`<EbayDetails> rendering renders default story correctly 1`] = `
<details
  class="details"
>
  <summary
    class="details__summary"
  >
    <span
      class="details__label"
    >
      Show me the details!
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <p
    class=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</details>
`;

exports[`<EbayDetails> rendering renders small size story correctly 1`] = `
<details
  class="details"
>
  <summary
    class="details__summary details__summary--small"
  >
    <span
      class="details__label"
    >
      Show me the details!
    </span>
    <span
      class="details__icon"
      hidden=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </summary>
  <p
    class=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</details>
`;
